--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@tanstack/react-query": "^5.89.0",
     "axios": "^1.12.2",
     "daisyui": "^5.1.13",
+    "framer-motion": "^12.23.16",
     "react": "^19.1.1",
+    "react-confetti": "^6.4.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "sweetalert2": "^11.23.0",
     "swiper": "^12.0.2",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
