--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@tanstack/react-query": "^5.89.0",
     "axios": "^1.12.2",
     "daisyui": "^5.1.13",
+    "firebase": "^12.3.0",
     "framer-motion": "^12.23.16",
     "react": "^19.1.1",
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
