--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "daisyui": "^5.1.13",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.16",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
