--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.16",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
