--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
+    "recharts": "^3.2.1",
     "sweetalert2": "^11.23.0",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.13",
