--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^7.9.0",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
     "daisyui": "^5.1.13",
     "firebase": "^12.3.0",
